Add z85 encoding and decoding

--- a/src/appleseed/CMakeLists.txt
+++ b/src/appleseed/CMakeLists.txt
@@ -57,6 +57,8 @@ set (foundation_array_sources
     foundation/array/arrayview.h
     foundation/array/exception.cpp
     foundation/array/exception.h
+    foundation/array/io.cpp
+    foundation/array/io.h
     foundation/array/keyframedarray.cpp
     foundation/array/keyframedarray.h
 )
@@ -594,6 +596,7 @@ set (foundation_meta_tests_sources
     foundation/meta/tests/test_vector.cpp
     foundation/meta/tests/test_voxelgrid.cpp
     foundation/meta/tests/test_windows.cpp
+    foundation/meta/tests/test_z85.cpp
     foundation/meta/tests/test_zip.cpp
 )
 list (APPEND appleseed_sources
@@ -966,6 +969,8 @@ set (foundation_utility_sources
     foundation/utility/xercesc.cpp
     foundation/utility/xercesc.h
     foundation/utility/xmlelement.h
+    foundation/utility/z85.cpp
+    foundation/utility/z85.h
     foundation/utility/zip.cpp
     foundation/utility/zip.h
 )
